test/compilable/nodiscard_assign.d
@nodiscard struct S {}

void assign()
{
    S a, b;
    a = b;
}
