test/fail_compilation/fail79.d

void main()
{
    int a, b;
    int* p;

    p = &a + &b;
}

